--- a/app/src/main/res/layout/activity_register_contractor.xml
+++ b/app/src/main/res/layout/activity_register_contractor.xml
@@ -68,15 +68,24 @@
                 android:inputType="textPassword"/>
 
             <EditText
+                android:id="@+id/edit_confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Confirmar contraseña"
+                android:inputType="textPassword"/>
+
+            <EditText
                 android:id="@+id/edit_company"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Nombre de la empresa"/>
 
+            <!-- Especialidad con valores precargados -->
             <Spinner
                 android:id="@+id/spinner_specialty"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="@color/white"/>
 
             <EditText
                 android:id="@+id/edit_rfc"
@@ -95,29 +104,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Coordenada Y"/>
-
-            <EditText
-                android:id="@+id/edit_secret_question"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Pregunta secreta"/>
-
-            <EditText
-                android:id="@+id/edit_secret_answer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Respuesta secreta"/>
         </LinearLayout>
     </ScrollView>
-
-    <!-- Lista de contratistas -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_contractors"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/text_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- Botón de Registro -->
     <com.google.android.material.button.MaterialButton
@@ -146,5 +134,4 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"/>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
