--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="red">#D32F2F</color>
     <color name="blue">#2196F3</color> <!-- Color azul estándar -->
     <color name="gray">#9E9E9E</color> <!-- Un gris neutro -->
+    <color name="green">#008000</color> <!-- Un gris neutro -->
 
 </resources>
