--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -2,17 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".activities.DirectoryActivity">
 
-    <!-- Título del directorio -->
     <TextView
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Directorio de Contratistas"
+        android:text="Directorio de Oficios"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -21,31 +22,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Lista de contratistas con tarjetas -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_contractors"
+        android:id="@+id/recycler_categories"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/text_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_exit"
-        android:padding="8dp"/>
-
-    <!-- Botón de salir estilizado -->
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_exit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Salir de la app"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:backgroundTint="@color/red"
-        app:cornerRadius="12dp"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        android:padding="8dp"
+        tools:listitem="@layout/item_category"/> <com.google.android.material.button.MaterialButton
+    android:id="@+id/btn_exit"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Salir de la app"
+    android:textSize="18sp"
+    android:textStyle="bold"
+    app:backgroundTint="@color/red"
+    app:cornerRadius="12dp"
+    android:textColor="@color/white"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_margin="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
