--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -13,7 +13,7 @@
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Directorio de Oficios"
+        android:text="Conexión de Oficios"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="@color/black"
