--- a/app/src/main/res/layout/activity_register_contractor.xml
+++ b/app/src/main/res/layout/activity_register_contractor.xml
@@ -51,7 +51,7 @@
                 android:id="@+id/edit_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Teléfono"
+                android:hint="Teléfono con clave (52 Mex)"
                 android:layout_marginTop="16dp"/>
 
             <EditText
