--- a/app/src/main/res/layout/activity_register_contractor.xml
+++ b/app/src/main/res/layout/activity_register_contractor.xml
@@ -58,7 +58,7 @@
                 android:id="@+id/edit_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Correo Electrónico"/>
+                android:hint="E-mail (real para recuperar password"/>
 
             <EditText
                 android:id="@+id/edit_password"
