--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -5,32 +5,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     android:background="@color/white"
     tools:context=".activities.DirectoryActivity">
 
-    <TextView
-        android:id="@+id/text_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Conexión de Oficios"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_directory"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <TextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Conexión de Oficios"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+    </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_find_nearby"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Buscar Anuncios Cercanos a Mí"
+        android:layout_marginHorizontal="16dp"
+        android:text="Buscar Anuncios Cercanos"
         app:icon="@drawable/ic_location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_title" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_directory" />
+
+    <TextView
+        android:id="@+id/text_subtitle_categories"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Selecciona una Categoría:"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_find_nearby" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_categories"
@@ -38,25 +62,24 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_find_nearby"
-        app:layout_constraintBottom_toTopOf="@id/btn_exit"
+        app:layout_constraintTop_toBottomOf="@id/text_subtitle_categories"
+        app:layout_constraintBottom_toTopOf="@id/text_disclaimer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:listitem="@layout/category_item" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_exit"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/text_disclaimer"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="Salir de la app"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:backgroundTint="@color/red"
-        app:cornerRadius="12dp"
+        android:text="Aviso de Responsabilidad"
+        android:textColor="?attr/colorPrimary"
+        android:padding="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
