--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -35,25 +35,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
-        android:text="Buscar Anuncios Cercanos"
+        android:text="Buscar Cerca de Mí"
         app:icon="@drawable/ic_location"
+        app:backgroundTint="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_directory" />
 
     <TextView
         android:id="@+id/text_subtitle_categories"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Selecciona una Categoría:"
-        android:textSize="20sp"
+        android:text="O Selecciona una Categoría:"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:gravity="center"
         android:layout_marginTop="24dp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_find_nearby" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -61,7 +59,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:padding="8dp"
         app:layout_constraintTop_toBottomOf="@id/text_subtitle_categories"
         app:layout_constraintBottom_toTopOf="@id/text_disclaimer"
         app:layout_constraintEnd_toEndOf="parent"
