--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#D32F2F</color>
-    <color name="blue">#2196F3</color> <!-- Color azul estándar -->
-    <color name="gray">#9E9E9E</color> <!-- Un gris neutro -->
-    <color name="green">#008000</color> <!-- Un gris neutro -->
-
+    <color name="blue">#2196F3</color>
+    <color name="gray">#9E9E9E</color>
+    <color name="green">#008000</color>
+    <color name="category_card_background">#9E9E9E</color>
 </resources>
